--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: python
 cache: pip
 python:
-   - '3.6'
+   - '3.5'
    - '3.7'
-   - '3.8'
-install: python setup.py install
+install:
+  - pip install -r test-requirements.txt
+  - pip install -r requirements.txt
 script: pytest 
